--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div id="container">
                     <ul id="navbar-header">
                     <li><a href="#home" id="item1" class="itens">Home</a></li>
-                    <li><a href="#sobre" id="item4" class="itens">Sobre mim</a></li>
+                    <li><a href="#sobre" id="item4" class="itens">Sobre</a></li>
                     <li><a href="#habilidades" id="item2" class="itens">Habilidades</a></li>
                     <li><a href="#projetos" id="item3" class="itens">Projetos</a></li>
                     </ul>
