--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <div class="container-projects">
                 <div class="box-image">
                   <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" src="img/pasvidethumb.png" data-holder-rendered="true">
-                    <p class="card-text">Site criado como simulação de um website pertencente a uma cafeteria.</p>
+                    <p class="card-text">Website criado como exemplo para uma cafeteria.</p>
                       <div class="btn-group">
                         <a href="https://joaopedrodevoz.github.io/Pas-vide/"  target="_blank"  rel="external"><button type="button" class="btn-view">View</button></a>
                       </div>
